--- a/wk3/index.html
+++ b/wk3/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
 
+  $ git submodule deinit PATH-TO-SUBMODULE
+$ git rm PATH-TO-SUBMODULE
+$ git commit -m "Remove submodule"
+$ rm -rf .git/modules/PATH-TO-SUBMODULE
+  
+  
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -56,6 +62,8 @@
       </div>
     </div>
 </div>
-
+ 
+  
+  
 </body>
 </html>
